Fix site title wrapping

--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -12,6 +12,7 @@
   font-size: 1.41421rem;
   line-height: 2.475rem;
   text-align: center;
+  white-space: nowrap;
 }
 
 .icon-links {
